# TasteQtWidgets

./: .clang-format  CMakeLists.txt  Doxyfile  README.md
cmake/: CCache.cmake  KDPySide6ModuleBuild.cmake
docs/: QGitlabAPI__global_8h_source.html  addnewrequirementdialog_8h_source.html  addnewreviewdialog_8h_source.html  annotated.html  checkedfilterproxymodel_8h_source.html  classes.html  classgitlab_1_1Issue-members.html  classgitlab_1_1Issue.html  classgitlab_1_1IssueRequestOptions-members.html  classgitlab_1_1IssueRequestOptions.html  classgitlab_1_1IssueRequestOptions__coll__graph.map  classgitlab_1_1IssueRequestOptions__coll__graph.md5  classgitlab_1_1Label-members.html  classgitlab_1_1Label.html  classgitlab_1_1LabelsRequestOptions-members.html  classgitlab_1_1LabelsRequestOptions.html  classgitlab_1_1LabelsRequestOptions__coll__graph.map  classgitlab_1_1LabelsRequestOptions__coll__graph.md5  classgitlab_1_1LabelsRequestOptions__inherit__graph.map  classgitlab_1_1LabelsRequestOptions__inherit__graph.md5  classgitlab_1_1QGitlabClient-members.html  classgitlab_1_1QGitlabClient.html  classgitlab_1_1QGitlabClient__coll__graph.map  classgitlab_1_1QGitlabClient__inherit__graph.map  classgitlab_1_1QGitlabClient__inherit__graph.md5  classgitlab_1_1RequestOptions-members.html  classgitlab_1_1RequestOptions.html  classgitlab_1_1RequestOptions__inherit__graph.map  classgitlab_1_1RequestOptions__inherit__graph.md5  classgitlab_1_1UrlComposer-members.html  classgitlab_1_1UrlComposer.html  classrequirement_1_1AddNewRequirementDialog-members.html  classrequirement_1_1AddNewRequirementDialog.html  classrequirement_1_1AddNewRequirementDialog__coll__graph.map  classrequirement_1_1AddNewRequirementDialog__coll__graph.md5  classrequirement_1_1AddNewRequirementDialog__inherit__graph.map  classrequirement_1_1AddNewRequirementDialog__inherit__graph.md5  classrequirement_1_1CheckedFilterProxyModel-members.html  classrequirement_1_1CheckedFilterProxyModel.html  classrequirement_1_1CheckedFilterProxyModel__coll__graph.md5  (+182 more)
docs/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_8.js  all_9.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_a.js  functions_b.js  (+5 more)
pytastewidgets/: CMakeLists.txt  README.md  __init__.py  install.py  main.py.in  tasteqtwidgets_global.h  tasteqtwidgets_typesystem.xml
tastewidgets/: CMakeLists.txt
tastewidgets/qgitlabapi/: CMakeLists.txt  LICENSE  QGitlabAPI_global.h  README.md  issue.cpp  issue.h  issuerequestoptions.cpp  issuerequestoptions.h  label.cpp  label.h  labelsrequestoptions.cpp  labelsrequestoptions.h  qgitlabclient.cpp  qgitlabclient.h  requestoptions.h  urlcomposer.cpp  urlcomposer.h
tastewidgets/requirements/: CMakeLists.txt  addnewrequirementdialog.cpp  addnewrequirementdialog.h  addnewrequirementdialog.ui  checkedfilterproxymodel.cpp  checkedfilterproxymodel.h  requirement.cpp  requirement.h  requirementsmanager.cpp  requirementsmanager.h  requirementsmodelbase.cpp  requirementsmodelbase.h  requirementswidget.cpp  requirementswidget.h  requirementswidget.ui
tastewidgets/requirements/gitlab/: gitlabrequirements.cpp  gitlabrequirements.h
tastewidgets/reviews/: CMakeLists.txt  addnewreviewdialog.cpp  addnewreviewdialog.h  addnewreviewdialog.ui  componentreviewsproxymodel.cpp  componentreviewsproxymodel.h  review.cpp  review.h  reviewsmanager.cpp  reviewsmanager.h  reviewsmodelbase.cpp  reviewsmodelbase.h  reviewswidget.cpp  reviewswidget.h  reviewswidget.ui
tastewidgets/reviews/gitlab/: gitlabreviews.cpp  gitlabreviews.h
tastewidgets/tracecommon/: CMakeLists.txt  credentialwidget.cpp  credentialwidget.h  credentialwidget.ui  issuesmanager.cpp  issuesmanager.h  issuesmanagerprivate.cpp  issuesmanagerprivate.h  issuetextproxymodel.cpp  issuetextproxymodel.h  tagfilterproxymodel.cpp  tagfilterproxymodel.h  tracecommonlibrary.cpp  tracecommonlibrary.h  tracecommonmodelbase.cpp  tracecommonmodelbase.h  tracecommonresources.qrc  widgetbar.cpp  widgetbar.h  widgetbar.ui
